<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/private_networking"
    android:orientation="vertical"
    android:weightSum="4"
    tools:context="com.root.wishlist.fragment.OpenNetwork">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.1"
        android:gravity="center">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/message_txt"
                    android:src="@drawable/networking" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageView

                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginLeft="60dp"
                    android:layout_marginTop="30dp"
                    android:contentDescription="@string/message_txt"
                    android:src="@drawable/icon" />
            </LinearLayout>
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:orientation="vertical">

        <TextView
            android:id="@+id/opennetwork_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/opennetwork"
            android:textColor="#4f5861"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/opennetwork_msg1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/opennetworkoffer"
            android:textColor="#AEAEAE"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.4"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/select_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:background="@drawable/roundbutton"
                android:gravity="center"
                android:padding="10dp"
                android:text="Select"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/opennetwork_msg2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/public_networkingmessage"
                android:textColor="#AEAEAE"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
