<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/upload_contacts"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.root.wishlist.activities.registration.RegisterationUploadContact">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".02"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".13"
        android:orientation="vertical"
        android:weightSum="1.1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".8"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/upload_contact_title"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".1"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/upload_contact"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/successStepsLLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".1"
            android:orientation="horizontal"
            android:weightSum="5">

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="#F9D21b"></View>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="#F9D21b"></View>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="#F9D21b"></View>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="#000"></View>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:background="#000"></View>


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".77"
        android:orientation="vertical"
        android:padding="10dp"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".8"
            android:orientation="vertical"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.2"
            android:orientation="vertical"
            android:weightSum="3">

            <TextView
                android:id="@+id/upload_contact1_txt"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/uploadcontact_msg1"
                android:textColor="#838383"
                android:textSize="14sp"
                android:paddingTop="30dp"/>

            <TextView
                android:id="@+id/upload_contact2_txt"
                android:layout_width="match_parent"
                android:layout_height="121dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/uploadcontact_msg2"
                android:textColor="#838383"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:contentDescription="@string/message_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/password" />

                <TextView
                    android:id="@+id/upload_contact3_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/uploadcontact_msg3"
                    android:textColor="#838383"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/uploadContact"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".08"
        android:background="#5B9EEc"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:contentDescription="@string/message_txt"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:paddingTop="5dp"
            android:src="@drawable/upload" />

        <TextView
            android:id="@+id/uploadContact_txt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="5dp"
            android:text="Upload Contacts"
            android:textColor="#FFFFFF" />
    </LinearLayout>
</LinearLayout>
